--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 
 
 /*----------------------------------------------
-CSS settings for HTML div Exact Center
+CSS settings for Add Recipe Popup
 ------------------------------------------------*/
 #popupContainer {
 width:100%;
@@ -15,8 +15,40 @@ left:0;
 display:none;
 position:fixed;
 background-color:#313131;
-overflow:auto
+overflow:auto;
 }
+#popupContainerDelete {
+    width:100%;
+    height:100%;
+    opacity:.95;
+    top:0;
+    left:0;
+    display:none;
+    position:fixed;
+    background-color:#313131;
+    overflow:auto;
+    }
+
+#deletePopup{
+display: flex;
+flex-wrap:wrap;
+flex-direction: column;
+justify-content: center;
+max-width:250px;
+min-width:200px;
+height: 50px;
+padding:10px 50px;
+border:2px solid gray;
+border-radius:10px;
+background-color:#fff;
+
+position:absolute;
+left:50%;
+top:17%;
+margin-left:-202px;
+}
+
+    
 img{
     width: 10%;
 }
@@ -24,7 +56,7 @@ img#close {
 position:absolute;
 right:-14px;
 top:-14px;
-cursor:pointer
+cursor:pointer;
 }
 
 div#popupSubmitRecipe {
@@ -32,11 +64,11 @@ position:absolute;
 left:50%;
 top:17%;
 margin-left:-202px;
-
 }
+
 form#recipeForm {
 display: flex;
-flex-wrap: wrap;
+flex-wrap:wrap;
 justify-content: center;
 max-width:300px;
 min-width:250px;
@@ -47,9 +79,7 @@ background-color:#fff
 }
 
 textarea {
-background-image:url(../images/msg.png);
-background-repeat:no-repeat;
-background-position:5px 7px;
+display: flex;
 width:82%;
 height:95px;
 padding:10px;
@@ -58,7 +88,6 @@ margin-top:30px;
 border:1px solid #ccc;
 padding-left:40px;
 font-size:16px;
-font-family:raleway;
 margin-bottom:30px
 }
 #submit {
@@ -109,7 +138,7 @@ cursor:pointer
     flex: 1;
 }
 
-.col1{
+/* .col1{
     height: 100px;
 }
 
@@ -118,7 +147,7 @@ cursor:pointer
 }
 .col3{
     height: 100px;
-}
+} */
 
 input{
     max-width: 100px;
