--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,6 +128,7 @@ cursor:pointer
     display: flex;
     flex-direction: row;
     flex-wrap:nowrap;
+    justify-content: center;
     width: 100%;
 }
 
@@ -154,4 +155,19 @@ input{
 }
 input#recipeNameField{
     max-width: fit-content;
+}
+
+
+
+
+.ck.ck-reset{
+    max-width: 350px;
+}
+
+/*----------------------------------------------
+CSS settings for Measurement Conversion
+------------------------------------------------*/
+
+#measurementConvertSection{
+    border: 1px solid black;
 }
